2002-05-20  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-stream-cat.c (stream_seek): Return the absolute offset
	into the cat stream rather than the relative offset of one of the
	substreams on success. Fixed a few other things too.
	(stream_read): Fix the logic here so that we never try reading
	from a stream that is current at EOS.

2002-05-16  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c (parser_scan_mime_part_content): Only compensate
	for the '\n' if we found a boundary.

2002-05-16  Charles Kerr <charles@rebelbase.com>

	* gmime-filter-yenc.c: fixed regression that caused end line of
	yenc encoding to not be detected.  This was causing crc errors in Pan.

2002-05-14  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-stream-filter.c (stream_destroy): Removed.

2002-05-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-stream-cat.c (stream_read): Don't allow our caller to read
	past the end of the stream.
	(stream_write): Same.
	(stream_seek): Don't forget to add the current source stream's
	bound_start when seeking on the current source stream.

	* gmime-message-partial.c (g_mime_message_partial_init): Zero our
	extra fields.
	(g_mime_message_partial_finalize): Cleanup strdup'd memory.
	(message_partial_set_content_type): Implemented.
	(g_mime_message_partial_class_init): Override set_content_type().
	(g_mime_message_partial_get_id): Simplify.
	(g_mime_message_partial_get_number): Simplify.
	(g_mime_message_partial_get_total): Simplify.

	* gmime-multipart.c (multipart_set_content_type): Implement.
	(g_mime_multipart_class_init): Override set_content_type().

	* gmime-object.c: Make set_content_type() virtual.

2002-05-12  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-message-partial.c (partial_compare): Fixed to work
	properly.

2002-05-12  Jeffrey Stedfast  <fejj@ximian.com>

	* test-partial.c: New test suite for gmime-message-partial.c.

	* gmime-stream-cat.c: Several fixes.
	(g_mime_stream_cat_class_init): Overload the seek method.
